2014-08-26  Carlos Garcia Campos  <cgarcia@igalia.com>

        [GTK] Translations are not initialized in the UI process
        https://bugs.webkit.org/show_bug.cgi?id=136249

        Reviewed by Philippe Normand.

        This is breaking things like webkitContextMenuActionGetForContextMenuItem()
        for non English locales in the cases where we use the action title to guess the
        action, because the action title we get from the web process is translated while
        the one in the UI process is in English.

        * UIProcess/API/gtk/WebKitWebContext.cpp:
        (createDefaultWebContext): Initialize gettext right before
        creating the default web context.

2014-09-30  Carlos Garcia Campos  <cgarcia@igalia.com>

        [GTK] The remote web inspector shows the HTML content as plain text
        https://bugs.webkit.org/show_bug.cgi?id=137250

        Reviewed by Gustavo Noronha Silva.

        Use GResource API directly to get the resource data, instead of
        using the GFile API, and use g_content_type_guess() to get the
        MIME Type.

        * UIProcess/InspectorServer/gtk/WebInspectorServerGtk.cpp:
        (WebKit::WebInspectorServer::platformResourceForPath):

2014-09-03  Michael Catanzaro  <mcatanzaro@igalia.com>

        [SOUP] Race condition when downloading a file due to the intermediate temporary file
        https://bugs.webkit.org/show_bug.cgi?id=136423

        Reviewed by Carlos Garcia Campos.

        * Shared/Downloads/soup/DownloadSoup.cpp:
        (WebKit::DownloadClient::DownloadClient): Replace m_destinationURI with
        m_destinationFile and add m_createdDestination.
        (WebKit::DownloadClient::deleteFilesIfNeeded): Added.
        (WebKit::DownloadClient::downloadFailed): Call deleteFilesIfNeeded.
        (WebKit::DownloadClient::didReceiveResponse): Attempt to create the
        destination file before the intermediate file. Fail here if the file